force-app/main/default/objects/Job_Application_Task_Template__mdt/Job_Application_Task_Template__mdt.object-meta.xml
<CustomObject>
    <description>Stores the templates used to create Tasks based on the different statuses of the Job Application record.  Used in order to make quick changes to the values of the task fields and add or remove tasks as needed without requiring a deployment.</description>
    <label>Job Application Task Template</label>
    <pluralLabel>Job Application Task Templates</pluralLabel>
</CustomObject>