force-app/main/default/objects/Job_Application_Task_Template__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to allow admins to toggle a template on/off.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>