force-app/main/default/objects/Job_Application_Task_Template__mdt/fields/DaysOffset__c.field-meta.xml
<CustomField>
    <fullName>DaysOffset__c</fullName>
    <description>Used in code to adjust how many days from the task creation date until the task completion date.</description>
    <label>DaysOffset</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>