force-app/main/default/objects/Job_Application_Task_Template__mdt/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <description>Determines the order that tasks should be created when called by code.</description>
    <label>Sort Order</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>