force-app/main/default/objects/Job_Application_Task_Template__mdt/listViews/Job_Application_Task_Templates.listView-meta.xml
<ListView>
    <fullName>Job_Application_Task_Templates</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Active__c</columns>
    <columns>Status__c</columns>
    <columns>Sort_Order__c</columns>
    <columns>DaysOffset__c</columns>
    <columns>Subject__c</columns>
    <filterScope>Everything</filterScope>
    <label>Job Application Task Templates</label>
    <language>en_US</language>
</ListView>